--- a/src/main/templates/main/workers/record.html
+++ b/src/main/templates/main/workers/record.html
@@ -127,7 +127,11 @@
                     xkey: 'device',
                     ykeys: ['sells'],
                     labels: ['Incidentes'],
-                    barRatio: 0.4,
+
+                     yLabelFormat: function(y){return y != Math.round(y)?'':y;},
+
+
+                    barRatio: 1,
                     xLabelMargin: 10,
                     hideHover: 'auto',
                     barColors: ["#3d88ba"]
