--- a/src/improvements/templates/improvements/meetings/list.html
+++ b/src/improvements/templates/improvements/meetings/list.html
@@ -26,9 +26,10 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th>Título</th>
-                    <th><span class="line"></span>Fecha de Mejora</th>
-                    <th><span class="line"></span>Acuerdos Completados (%)</th>
+                    <th>Nombre</th>
+                    <th><span class="line"></span>Aplicado a</th>
+                    <th><span class="line"></span>Fecha de generación</th>
+                    <th><span class="line"></span>completado (%)</th>
 
                     {% if request.user.is_superuser %}
                         <th><span class="line"></span>Opciones</th>
@@ -40,12 +41,13 @@
                 {% for meeting in meetings %}
                     <tr>
                         <td>{{ meeting.title }}</td>
+                        <td>{{ meeting.get_applied_to_display }}</td>
                         <td>{{ meeting.date }}</td>
                         {% if meeting.percentage or meeting.percentage == 0 %}
                             <td>{{ meeting.percentage }}%
                             </td>
                         {% else %}
-                            <td>Agrege Acuerdos</td>
+                            <td>Agrege Acuerdos de mejora</td>
                         {% endif %}
                         {% if request.user.is_superuser %}
                             <td>
