--- a/src/main/templates/main/hooks/field_with_label.html
+++ b/src/main/templates/main/hooks/field_with_label.html
@@ -29,7 +29,7 @@
 
 {% else %}
     <div class="form-group">
-        <label class="col-md-2 control-label">{{ field.label|capfirst }} :</label>
+        <label class="col-md-2 control-label">{{ field.label|capfirst }}</label>
         <div class="col-md-8">
             {{ field }}
         </div>
